; ModuleID = '/home/carl/AnghaBench/linux/arch/powerpc/kernel/extr_hw_breakpoint.c_hw_breakpoint_exceptions_notify.c'
source_filename = "/home/carl/AnghaBench/linux/arch/powerpc/kernel/extr_hw_breakpoint.c_hw_breakpoint_exceptions_notify.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.notifier_block = type { i32 }

@NOTIFY_DONE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @hw_breakpoint_exceptions_notify(%struct.notifier_block* %0, i64 %1, i8* %2) #0 {
  %4 = alloca %struct.notifier_block*, align 8
  %5 = alloca i64, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  store %struct.notifier_block* %0, %struct.notifier_block** %4, align 8
  store i64 %1, i64* %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i32, i32* @NOTIFY_DONE, align 4
  store i32 %8, i32* %7, align 4
  %9 = load i64, i64* %5, align 8
  switch i64 %9, label %16 [
    i64 129, label %10
    i64 128, label %13
  ]

10:                                               ; preds = %3
  %11 = load i8*, i8** %6, align 8
  %12 = call i32 @hw_breakpoint_handler(i8* %11)
  store i32 %12, i32* %7, align 4
  br label %16

13:                                               ; preds = %3
  %14 = load i8*, i8** %6, align 8
  %15 = call i32 @single_step_dabr_instruction(i8* %14)
  store i32 %15, i32* %7, align 4
  br label %16

16:                                               ; preds = %3, %13, %10
  %17 = load i32, i32* %7, align 4
  ret i32 %17
}

declare dso_local i32 @hw_breakpoint_handler(i8*) #1

declare dso_local i32 @single_step_dabr_instruction(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
